# xmpp.org

./: .pre-commit-config.yaml  Dockerfile  pyproject.toml
.github/workflows/: build-website.yml
content/about/: xmpp-standards-foundation.md
content/blog/: 2026-01-04_chat-future-initiative.md
content/blog/newsletter/: 2026-04-05-newsletter.md
content/uses/: gaming.md  instant-messaging.md
data/: members.json  software.json
themes/xmpp.org/layouts/partials/: share-links.html
themes/xmpp.org/layouts/shortcodes/: member-introduction.html  software-details.html  software-overview-doap.html
themes/xmpp.org/static/js/: scripts.js
