[project]
name = "xmpp-org-website"
version = "1.0.0"

dependencies = [
  "beautifulsoup4",
  "colorama",
  "defusedxml",
  "lxml",
  "packaging",
  "Pillow",
  "python-slugify",
  "requests",
  "scour",
]

[project.optional-dependencies]

[dependency-groups]
dev = [
  "pre-commit==4.5.1",
  "pyright==1.1.408",
  "ruff==0.15.9",
]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]

ignore = [
  "ANN401",   # Dynamically typed expressions (typing.Any) are disallowed in `xx`
  "C901",     # `xx` is too complex
  "COM812",   # missing-trailing-comma
  "D",        # docstyle
  "EXE002",   # no shebang
  "FBT001",   # Boolean-typed positional argument in function definition
  "FBT002",   # Boolean default positional argument in function definition
  "INP001",   # File `xx` is part of an implicit namespace package. Add an `__init__.py`.
  "PLR0912",  # Too many branches
  "PLR0915",  # Too many statements
  "PLR2004",  # Magic value used in comparison, consider replacing `xx` with a constant variable
  "S101",     # Use of `assert` detected
  "S603",     # `subprocess` call: check for execution of untrusted input
  "S607",     # Starting a process with a partial executable path
  "T201",     # `print` found
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
docstring-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.isort]
case-sensitive = false
order-by-type = false
force-single-line = true
section-order = [
  "future",
  "typing",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder"
]

[tool.ruff.lint.isort.sections]
typing = ["_typeshed", "typing", "typing_extensions"]
